[package]
name = "skryn"
authors = ["ImFeH2"]
version = "0.1.0"
edition = "2024"

[dependencies]
bitflags = "2.2.1"
calloop = "0.14.0"
image = "0.25.5"
profiling = "1.0.13"
thiserror = "1.0.25"
tracing = "0.1.37"
tracing-subscriber = { version = "0.3.16", features = ["env-filter"] }
wayland-egl = { version = "0.32.5" }
winit = { version = "0.30.0", default-features = false, features = ["wayland", "wayland-dlopen", "x11", "rwh_06"] }

[dependencies.smithay]
git = "https://github.com/Smithay/smithay.git"
default-features = false
features = [
    "backend_winit",
    "backend_egl",
    "desktop",
    "renderer_gl",
    "wayland_frontend",
]
